--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,13 +1,19 @@
-                h1{
+               /*body {
+        	font-size: 16px;
+        	color: #fff;
+        	background-color: #61122f;
+        	font-family: 'Oxygen', sans-serif;
+        }*/
+        /*h1{
 			color: red;
 			text-align: center;
 			font-weight: bold;
-		}
+		} */
 		body{
-			background-color: rgb(244, 244, 117);
-			font-family: monospace;
+			background-color: /*#a7efdd*/#fcfcfc;
+			font-family: Helvetica;
 		}
-		a{
+		/*a{
 			width: 6em;
 			text-decoration: none;
 			color: white;
@@ -21,20 +27,91 @@
 		li{
 			display: inline;
 		}
-		#page-container{
-			width: 760px;
-			margin: auto;
+        */ 
+
+		#header-nav{
+			background-color: #04332a;
+			height: 100px;
 		}
-		#main-nav{
-			background-color: #f6b319;
-			width: 760px;
-			height: 50px;
-		}
-		#header{
-            width: 760px;
-			height: 50px;
-		}
-		#biography{
+        #logo-img{
+            background: url('../logo-img.jpg') no-repeat top left;
+        	width: 70px;
+        	height: 70px;
+        	margin: 10px 10px 2.5px 0;
+        	border-radius: 25px;
+        	overflow: none;
+        }
+        .navbar-brand {
+        	padding-top: 25px;
+        }
+        .navbar-brand a {
+        	font-family: Helvetica;
+        	color: #dbe2d7;
+        	font-size: 1.5em;
+        	text-transform: uppercase;
+        	font-weight: bold;
+        	text-shadow: 1px 1px 1px;
+        	margin-top: 0;
+        	margin-bottom: 0;
+        	line-height: .75;
+        } 
+        .navbar-brand a:hover, .navbar-brand a:focus {
+        	text-decoration: none;
+        }
+        #nav-list {
+        	margin-top: 10px;
+        }
+        #nav-list a {
+        	color: #f25a52;
+        	text-align: center;
+        	font-weight: bold;
+        }
+        #nav-list a span {
+        	font-size: 1.8em;
+        } 
+        .navbar-brand > img {
+        	display: block;
+        }
+        .navbar-toggle {
+        	position: relative;
+        	float: right;
+        	padding: 9px 10px;
+        	margin-top: 8px;
+        	margin-right:  15px;
+        	margin-bottom: 8px;
+        	background-color: transparent;
+        	background-image: none;
+        	border: 1px solid transparent;
+        	border-radius: 4px;
+        }
+        .navbar-toggle:focus {
+        	outline: 0;
+        }
+        .navbar-toggle .icon-bar {
+        	display: block;
+        	width: 22px;
+        	height: 2px;
+        	border-radius: 1px;
+        }
+        .navbar-toggle .icon-bar + .icon-bar {
+            margin-top: 4px;
+        }
+        .navbar-nav {
+        	margin: 7.5px -15px;
+        }
+        .navbar-nav > li > a {
+        	padding-top: 10px;
+        	padding-bottom: 10px;
+        	line-height: 20px;
+        }
+        .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+        	border: 1px solid #f25a52;
+        }
+        .navbar-header button.navbar-toggle {
+        	clear: both;
+        }
+
+		/*#biography{
 			background: grey;
 			width: 30%;
 			height: 400px;
@@ -42,10 +119,125 @@
 			border: 5px dashed;
 			float: right;
 		}
-		#content{
-			width: 480px;
+
+		#header-nav {
+			background-color: #f6b319;
+			border-radius: 0;
+			border: 0;
 		}
-		#footer{
-            width: 760px;
-            height: 66px;
+		#logo-img {
+			background: url('https://s-media-cache-ak0.pinimg.com/originals/c5/5a/aa/c55aaa94fcbe01acefff8b5210ce123c.jpg');
+			width: 150px;
+			height: 150px;
+			margin: 10px 15px 10px 0;
+		}*/
+		.container .jumbotron {
+			box-shadow: 0 0 50px #3F0C1F;
+			border: 2px solid #3F0C1F;
 		}
+		#digi-mar, #data-sci, /*#thoughts,*/ #social {
+			height: 250px;
+			width: 100%;
+			margin-bottom: 15px;
+			position: relative;
+			border: 2px solid #3F0C1F;
+			overflow: hidden;
+		}
+		#digi-mar:hover, #data-sci:hover, /*#thoughts:hover,*/ #social:hover {
+			box-shadow: 0 1px 5px 1px #cccccc;
+		}
+		#digi-mar {
+			background: url('../digitalmarketing.jpg') no-repeat;
+			background-position: center; 
+		}
+		#data-sci {
+			background: url('../datascience.jpg') no-repeat;
+			background-position: center; 
+		}
+		/*#thoughts {
+			background: url('../thought.jpg') no-repeat;
+			background-position: center; 
+		} */
+		#social {
+			background: url('../social.jpg') no-repeat;
+			background-position: center; 
+		}
+		#digi-mar span, #data-sci span, /*#thoughts span,*/ #social span {
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			width: 100%;
+			text-align: center;
+			font-size: 1.6em;
+			text-transform: uppercase;
+			background-color: #000;
+			color: #fff;
+			opacity: .8; 
+		} 
+		.container .jumbotron {
+			margin-top: 30px;
+			padding: 0;
+		}
+		#digi-mar, #data-sci, /*#thoughts,*/ #social {
+			width: 360px;
+			margin: 0 auto 15px;
+		}
+		.panel-footer {
+			margin-top: 30px;
+			padding-top: 35px;
+			padding-bottom: 30px;
+			background-color: #04332a;
+			border-top: 0;
+		}
+		.panel-footer div.row {
+			margin-bottom: 35px;
+		}
+		.text-center {
+			color: #fff;
+		}
+		.panel-footer section {
+			margin-bottom: 30px;
+			text-align: center;
+		}
+		.panel-footer section:nth-child(3) {
+			margin-bottom: 0;
+		} 
+		.panel-footer section hr {
+			width: 50%;
+		}
+		@media (min-width: 1200px) {
+            .jumbotron {
+            	background: url('../jumbotron-1200.jpg') no-repeat;
+            	height: 675px;
+            	box-shadow: 0 0 50px #3F0C1F;
+            	border: 2px solid #3F0C1F;
+            }
+		}
+
+		@media (min-width: 992px) and (max-width: 1199px) {
+            .jumbotron {
+            	background: url('../jumbotron-992.jpg') no-repeat;
+            	height: 558px;
+            	box-shadow: 0 0 50px #3F0C1F;
+            	border: 2px solid #3F0C1F;
+            }
+            
+		}
+
+		@media (min-width: 768px) and (max-width: 991px) {
+            .jumbotron {
+             	background: url('../jumbotron-768.jpg') no-repeat;
+            	height: 432px;
+            	box-shadow: 0 0 50px #3F0C1F;
+            	border: 2px solid #3F0C1F;
+             }
+		}
+		@media (max-width: 767px) {
+            .container .jumbotron {
+            	margin-top: 30px;
+            	padding: 0;
+                box-shadow: 0 0 50px #3F0C1F;
+            	border: 2px solid #3F0C1F;
+            }
+		}
+
